--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/react": "^17",
     "@types/react-dom": "^17",
     "react": "^17",
+    "react-alice-carousel": "^2.6.4",
     "react-dom": "^17",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
