--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
-    "@emotion/style": "^0.8.0",
+    "@emotion/styled": "11.3.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
@@ -17,11 +17,13 @@
     "@types/node": "^16.18.3",
     "@types/react": "^17",
     "@types/react-dom": "^17",
+    "axios": "0.21.4",
     "react": "^17",
     "react-alice-carousel": "^2.6.4",
     "react-dom": "^17",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-use-localstorage": "3.5.3",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
