--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^17",
     "@types/react-dom": "^17",
-    "axios": "0.21.4",
+    "axios": "^1.1.3",
     "react": "^17",
     "react-alice-carousel": "^2.6.4",
     "react-dom": "^17",
