--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/node": "^16.18.3",
     "@types/react": "^17",
     "@types/react-dom": "^17",
+    "@types/redux": "^3.6.0",
     "axios": "^1.1.3",
     "react": "^17",
     "react-alice-carousel": "^2.6.4",
     "react-dom": "^17",
+    "react-redux": "^7.2.5",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-use-localstorage": "^3.5.3",
